<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <Toolbar
            android:id="@+id/add_event_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@id/scroll"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/ic_chevron_left"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/add_event"
                android:textColor="@color/white"
                android:textSize="20sp" />

    </Toolbar>

    <ScrollView
            android:id="@+id/scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_event_toolbar">

        <androidx.constraintlayout.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:layout_marginRight="200dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/fragment_border" />

            <LinearLayout
                    android:id="@+id/fragment_border"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/location_text"
                    app:layout_constraintBottom_toTopOf="@id/event_name"
                    android:background="@drawable/outline">

                <fragment
                        android:id="@+id/add_event_search"
                        android:layout_width="300dp"
                        android:layout_height="60dp"
                        android:background="@drawable/outline"
                        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/event_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:imeOptions="actionNext"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragment_border">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/event_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/event_name"
                        android:inputType="textCapSentences"
                        android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/event_description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="15dp"
                    android:imeOptions="actionNext"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/event_name">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/event_description_text"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:gravity="left"
                        android:hint="@string/description"
                        android:inputType="textCapSentences|textMultiLine"
                        android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/text_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:layout_marginTop="1dp"
                    app:layout_constraintBottom_toTopOf="@id/nr_attendees"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/event_category"
                    app:layout_constraintTop_toBottomOf="@id/event_description"
                    android:textSize="18dp" />

            <Spinner
                    android:id="@+id/event_category"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/outline"
                    app:layout_constraintBottom_toTopOf="@id/nr_attendees"
                    app:layout_constraintLeft_toRightOf="@id/text_category"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/event_description" />

            <TextView
                    android:id="@+id/text_age_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toTopOf="@id/age_range"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintRight_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/event_category"
                    android:text="@string/age_range" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nr_attendees"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="23dp"
                    app:layout_constraintBottom_toTopOf="@id/event_date"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/age_range"
                    app:layout_constraintTop_toBottomOf="@+id/event_category">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nr_attendees_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/nr_of_attendees"
                        android:inputType="date"
                        android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                    android:id="@+id/age_range"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginRight="23dp"
                    android:imeOptions="actionNext"
                    android:background="@drawable/outline"
                    app:layout_constraintBottom_toTopOf="@id/text_age_range"
                    app:layout_constraintLeft_toRightOf="@id/nr_attendees"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/event_category" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/event_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:imeOptions="actionNext"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/age_range">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/event_date_text"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:drawableStart="@drawable/ic_date"
                        android:drawablePadding="10dp"
                        android:hint="@string/date"
                        android:focusable="false"
                        android:inputType="date"
                        android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/event_start_time"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:imeOptions="actionNext"
                    app:layout_constraintTop_toBottomOf="@id/event_date"
                    app:layout_constraintRight_toLeftOf="@+id/event_end_time"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/start_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/start"
                        android:padding="12dp"
                        android:textSize="18sp"
                        android:imeOptions="actionNext"
                        android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/event_end_time"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:imeOptions="actionDone"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintTop_toBottomOf="@id/event_date"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/event_start_time">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/end_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/end"
                        android:padding="12dp"
                        android:textSize="18sp"
                        android:imeOptions="actionDone"
                        android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.ConstraintLayout>
    </ScrollView>

    <TextView
            android:id="@+id/done_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/done"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:background="@color/colorAccent"
            android:clickable="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>