<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="15sp"
                android:paddingTop="30dp"
                android:fontFamily="@font/lato_medium"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/first_name"
                app:layout_constraintHorizontal_bias="0.2"/>

        <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/last_name"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:id="@+id/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:imeOptions="actionNext">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="15sp"
                    android:hint="@string/first_name"
                    android:fontFamily="@font/lato_medium"
                    android:imeOptions="actionNext"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:inputType="textCapSentences"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/first_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/birthday"
                android:id="@+id/last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:imeOptions="actionNext">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="15sp"
                    android:fontFamily="@font/lato_medium"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:inputType="textCapSentences"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthday"
                app:layout_constraintTop_toBottomOf="@id/last_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:imeOptions="actionNext">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthday_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="15sp"
                    android:fontFamily="@font/lato_medium"
                    android:hint="@string/birthday"
                    android:drawableStart="@drawable/ic_date"
                    android:drawablePadding="10dp"
                    android:focusable="false"
                    android:inputType="date"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/birthday"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/edit_btn"
                android:id="@+id/description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:imeOptions="actionDone"
                app:layout_constraintHorizontal_bias="0.5">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/lato_medium"
                    android:hint="@string/description"
                    android:imeOptions="actionDone"
                    android:drawablePadding="10dp"
                    android:inputType="textCapSentences|textMultiLine"
                    android:gravity="left"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/edit_btn"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:fontFamily="@font/lato_medium"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_round"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>