<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccentDarker"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/suggestion"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:elevation="4dp">

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_chevron_left" />

            <TextView
                    android:id="@+id/write_a_review"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_centerInParent="true"
                    android:text="@string/write_review"
                    android:fontFamily="@font/lato_medium"
                    android:textColor="@color/white" />

            <TextView
                    android:id="@+id/submit_btn"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="18sp"
                    android:text="@string/submit"
                    android:fontFamily="@font/lato_medium"
                    android:textColor="@color/white"
                    android:clickable="true"
                    android:focusable="true"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
            android:id="@+id/suggestion"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/new_rating"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/write_review_message"
            android:textSize="15sp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:fontFamily="@font/lato_medium"
            android:paddingRight="20dp"
            android:layout_marginTop="50dp"/>

    <RatingBar
            android:id="@+id/new_rating"
            app:layout_constraintTop_toBottomOf="@id/suggestion"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/new_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:numStars="5"
            android:stepSize="0.5"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_review"
            app:layout_constraintTop_toBottomOf="@id/new_rating"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="255">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_review_text"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:fontFamily="@font/lato_medium"
                android:textSize="15sp"
                android:hint="@string/review_description"
                android:inputType="textCapSentences|textMultiLine"
                android:gravity="start"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>